kubernetes/cluster-init/templates/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: default
  annotations:
    # External DNS
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # for creating record-set
    external-dns.alpha.kubernetes.io/hostname: demo.k8s.aws-tests.skyworkz.nl

    # Ingress
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: demo.k8s.aws-tests.skyworkz.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
  tls:
  - hosts:
    - demo.k8s.aws-tests.skyworkz.nl
